--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,11 @@
   "homepage": "https://github.com/jmoyson/coldr#readme",
   "dependencies": {
     "chalk": "^5.6.2",
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "resend": "^6.3.0",
+    "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.4"
   }
 }
