--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
+    "ora": "^9.0.0",
     "resend": "^6.3.0",
     "zod": "^4.1.12"
   },
