--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jmoyson/coldr",
-  "version": "0.0.1",
+  "version": "0.0.2-beta",
   "description": "Run Cold emails campaigns from your terminal.",
   "bin": {
     "coldr": "bin/index.js"
