--- a/scaffold/config.json
+++ b/scaffold/config.json
@@ -1,5 +1,6 @@
 {
-  "sender": "Your Name <hello@yourdomain.com>",
+  "sender": "Your Name <hello@sending.yourdomain.com>",
+  "replyTo": "hello@yourdomain.com",
   "subject": "Quick question about {{company}}",
   "perDay": 20,
   "startDate": "2025-10-29T00:00:00Z",
