--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jmoyson/coldr",
-  "version": "0.0.2-beta.2",
+  "version": "0.0.2-beta.3",
   "description": "Run Cold emails campaigns from your terminal.",
   "bin": {
     "coldr": "bin/index.js"
@@ -48,6 +48,7 @@
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "ora": "^9.0.0",
+    "papaparse": "^5.5.3",
     "resend": "^6.3.0",
     "zod": "^4.1.12"
   },
