Big refacto with gemini and codex

--- a/scaffold/config.json
+++ b/scaffold/config.json
@@ -5,6 +5,5 @@
   "perDay": 20,
   "startDate": "2025-10-29T00:00:00Z",
   "workDays": [1, 2, 3, 4, 5],
-  "workHours": [9, 17],
-  "unsubscribeMailto": "mailto:unsubscribe@yourdomain.com?subject=STOP"
+  "workHours": [9, 17]
 }
